--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
+cffi==1.14.5
+cryptography==3.4.7
+importlib-metadata==4.0.1
+jeepney==0.6.0
+keyring==23.0.1
+keyrings.alt==4.0.2
+pip-autoremove==0.9.1
+pycparser==2.20
 pyodbc==4.0.30
+SecretStorage==3.3.1
+typing-extensions==3.10.0.0
+zipp==3.4.1
